styles/main.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    text-decoration-style: none;
    box-shadow: none;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
}
:root {
    font-family: 'Alata', sans-serif;
    font-family: 'Poppins', sans-serif;
    --main-color: #353535;
    --second-color: #3c6e71;

    --color-three: #ffffff;
    --color-four: #d9d9d9;
    --color-five: #284b63;

    background-color: var(--main-color);
}
/* Center everything in the body */
body {
    display: flex;
    justify-content: center;
    height: 100vh;
    align-items: center;

    color: var(--color-three);
    --sl-color-primary-hue: 30;
    -sl-color-primary-saturation: 90%;
}
/* Styling the button */
.question-btn::part(base) {
    background: var(--color-five);
    border-style: none;
    color: var(--color-three);
}
.question-btn::part(base):hover {
    transform: scale(0.98, 0.98);
    transform: rotate(3deg);
}
.question-btn::part(base):active {
    transform: scale(1.02, 1.02);
}
/* Styling the section */
.section-center {
    background: var(--second-color);
    width: 100%;

    display: grid;
    justify-items: self-end; /* solutions */
}
.title {
    padding-bottom: 2em;
}
.questions {
    display: flex;
    flex-direction: column;
    /* Aligns text center */
    align-items: center;
}
/* Add margins to all paragraphs */
p {
    padding: 0.8em;
}
.question-btn {
    padding: 0.8em;
}
.p-one {
    font-weight: 600;
}
.p-two {
    font-weight: 200;
}
/* This puts button & question in one line */
.question-title {
    display: inline-flex;
}
/* hide text */
.question-text {
    display: none;
}
.show-text .question-text {
    display: block;
}
.minus-icon {
    display: none;
}
.show-text .minux-icon {
    display: inline;
}
.show-text .plus-icon {
    display: none;
}

